--- a/perception/interactive_perception_msgs/CMakeLists.txt
+++ b/perception/interactive_perception_msgs/CMakeLists.txt
@@ -1,8 +1,5 @@
 cmake_minimum_required(VERSION 2.4.6)
 include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
-# CMake 2.4.6 doesn't include FindPkgConfig, so we provide our own copy
-include($ENV{ROS_ROOT}/core/rosbuild/FindPkgConfig.cmake)
-
 
 # Set the build type.  Options are:
 #  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
@@ -19,11 +16,9 @@ genaction()
 
 rosbuild_init()
 
+#set the default path for built executables to the "bin" directory
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
+#set the default path for built libraries to the "lib" directory
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 rosbuild_genmsg()
-
-###backend node
-
-rosbuild_add_executable(pr2_interactive_object_detection_backend src/pr2_interactive_object_detection_backend.cpp)
