--- a/perception/robot_self_filter_color/CMakeLists.txt
+++ b/perception/robot_self_filter_color/CMakeLists.txt
@@ -8,28 +8,62 @@ include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 #  RelWithDebInfo : w/ debug symbols, w/ optimization
 #  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
 
-set(ROS_BUILD_TYPE Release)
-
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 find_package(Eigen REQUIRED)
-include_directories(SYSTEM ${EIGEN_INCLUDE_DIRS})
-add_definitions(${EIGEN_DEFINITIONS})
+find_package(PCL REQUIRED)
+include_directories(SYSTEM ${EIGEN_INCLUDE_DIRS}
+                           ${PCL_INCLUDE_DIRS}
+)
+
+set(ROS_BUILD_TYPE Release)
+
+find_package(PCL)
+include_directories(SYSTEM ${PCL_INCLUDE_DIRS})
+find_package(PkgConfig REQUIRED)
+find_package(ASSIMP QUIET)
+if (NOT ASSIMP_FOUND)
+  pkg_check_modules(ASSIMP assimp)
+endif()
+if (ASSIMP_FOUND)
+  if( ${ASSIMP_VERSION} STRGREATER "2.0.0" )
+    set(IS_ASSIMP3 1)
+    add_definitions(-DIS_ASSIMP3)
+    message(STATUS "Found assimp v3")
+  else()
+    message(STATUS "Found assimp v2")
+  endif()
+  include_directories(${ASSIMP_INCLUDE_DIRS})
+  link_directories(${ASSIMP_LIBRARY_DIRS})
+else()
+  message(STATUS "could not find assimp (perhaps available thorugh ROS package?), so assimping assimp v2")
+  set(ASSIMP_LIBRARIES assimp)
+  set(ASSIMP_LIBRARY_DIRS)
+  set(ASSIMP_CXX_FLAGS)
+  set(ASSIMP_CFLAGS_OTHER)
+  set(ASSIMP_LINK_FLAGS)
+  set(ASSIMP_INCLUDE_DIRS)
+  set(IS_ASSIMP3 0) # most likely not
+endif()
 
 rosbuild_init()
-
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 rosbuild_add_boost_directories()
 
 rosbuild_add_library(robot_self_filter_color src/self_mask_color.cpp)
-
-#find_package(Boost REQUIRED)
-#target_link_libraries(robot_self_filter_color ${Boost_LIBRARIES}) 
+rosbuild_add_openmp_flags(robot_self_filter_color)
+target_link_libraries(robot_self_filter_color assimp
+                                        geometric_shapes
+                                        ${PCL_LIBRARIES}
+)
 
 rosbuild_add_executable (test_filter_color src/test_filter_color.cpp)
-target_link_libraries (test_filter_color robot_self_filter_color)
+rosbuild_add_openmp_flags (test_filter_color)
+target_link_libraries (test_filter_color robot_self_filter_color assimp)
 
 rosbuild_add_executable(self_filter_color src/self_filter_color.cpp)
-target_link_libraries(self_filter_color robot_self_filter_color)
+rosbuild_add_openmp_flags(self_filter_color)
+target_link_libraries(self_filter_color assimp
+                                  geometric_shapes
+                                  robot_self_filter_color
+)
 rosbuild_link_boost(self_filter_color signals)
