--- a/applications/pr2_interactive_object_detection_frontend/CMakeLists.txt
+++ b/applications/pr2_interactive_object_detection_frontend/CMakeLists.txt
@@ -13,9 +13,9 @@ include($ENV{ROS_ROOT}/core/rosbuild/FindPkgConfig.cmake)
 #set(ROS_BUILD_TYPE RelWithDebInfo)
 
 #generate the actions
-rosbuild_find_ros_package(actionlib_msgs)
-include(${actionlib_msgs_PACKAGE_PATH}/cmake/actionbuild.cmake)
-genaction()
+#rosbuild_find_ros_package(actionlib_msgs)
+#include(${actionlib_msgs_PACKAGE_PATH}/cmake/actionbuild.cmake)
+#genaction()
 
 rosbuild_init()
 
@@ -25,7 +25,7 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 #uncomment if you have defined messages
-rosbuild_genmsg()
+#rosbuild_genmsg()
 #uncomment if you have defined services
 #rosbuild_gensrv()
 
