--- a/applications/pr2_interactive_manipulation_frontend/CMakeLists.txt
+++ b/applications/pr2_interactive_manipulation_frontend/CMakeLists.txt
@@ -47,6 +47,7 @@ qt4_wrap_cpp(MOC_FILES
   include/pr2_interactive_manipulation/point_head_camera_display.h
   include/pr2_interactive_manipulation/publish_click_camera_display.h
   include/pr2_interactive_manipulation/awesome_camera_display.h
+  include/pr2_interactive_manipulation/invisible_robot_display.h
 )
 
 # rviz plugin
@@ -62,6 +63,7 @@ rosbuild_add_library(interactive_manipulation_plugin
   src/interactive_manipulation_frontend.cpp
   src/advanced_options_dialog.cpp
   src/init.cpp
+  src/invisible_robot_display.cpp
   ${UIC_FILES}
   ${MOC_FILES}
 )
