--- a/manipulation/pr2_object_manipulation_msgs/msg/.gitignore
+++ b/manipulation/pr2_object_manipulation_msgs/msg/.gitignore
@@ -48,3 +48,10 @@ TestGripperPoseActionResult.msg
 TestGripperPoseFeedback.msg
 TestGripperPoseGoal.msg
 TestGripperPoseResult.msg
+PickupIMObjectAction.msg
+PickupIMObjectActionFeedback.msg
+PickupIMObjectActionGoal.msg
+PickupIMObjectActionResult.msg
+PickupIMObjectFeedback.msg
+PickupIMObjectGoal.msg
+PickupIMObjectResult.msg
