--- a/manipulation/pr2_object_manipulation_launch/CMakeLists.txt
+++ b/manipulation/pr2_object_manipulation_launch/CMakeLists.txt
@@ -16,15 +16,11 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 #set the default path for built libraries to the "lib" directory
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
-#uncomment if you have defined messages
-#rosbuild_genmsg()
-#uncomment if you have defined services
-#rosbuild_gensrv()
-
-#common commands for building c++ executables and libraries
-#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
-#target_link_libraries(${PROJECT_NAME} another_library)
-#rosbuild_add_boost_directories()
-#rosbuild_link_boost(${PROJECT_NAME} thread)
-#rosbuild_add_executable(example examples/example.cpp)
-#target_link_libraries(example ${PROJECT_NAME})
+rosbuild_add_roslaunch_check(launch/c_jexp.launch ROBOT=sim)
+rosbuild_add_roslaunch_check(launch/c_jinv.launch ROBOT=sim)
+rosbuild_add_roslaunch_check(launch/c_jtask.launch ROBOT=sim)
+rosbuild_add_roslaunch_check(launch/c_jt.launch ROBOT=sim)
+rosbuild_add_roslaunch_check(launch/c_rmrc.launch ROBOT=sim)
+rosbuild_add_roslaunch_check(launch/laser+stereo-perception.launch ROBOT=sim)
+rosbuild_add_roslaunch_check(launch/pr2_manipulation.launch ROBOT=sim)
+rosbuild_add_roslaunch_check(launch/pr2_manipulation_prerequisites.launch ROBOT=sim)
